--- a/src/pages/components/checkbox/code.mdx
+++ b/src/pages/components/checkbox/code.mdx
@@ -19,7 +19,7 @@ documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/checkbox--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-checkbox--checkbox"
     >
 
 <MdxIcon name="react" />
@@ -62,7 +62,7 @@ documentation, see the Storybooks for each framework below.
     knobs={{ Checkbox: ['indeterminate', 'disabled', 'hideLabel'] }}
     links={{
       React:
-        'http://react.carbondesignsystem.com/?path=/story/checkbox--checked',
+        'https://react.carbondesignsystem.com/?path=/story/components-checkbox--checkbox',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-checkbox--basic',
       Vue:
