--- a/src/pages/components/data-table/code.mdx
+++ b/src/pages/components/data-table/code.mdx
@@ -26,7 +26,7 @@ usage documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/datatable--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-datatable--usage"
     >
 
 <MdxIcon name="react" />
@@ -82,7 +82,7 @@ usage documentation, see the Storybooks for each framework below.
     knobs={{ DataTable: ['isSortable'], Table: ['size', 'useZebraStyles'] }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/datatable--usage',
+        'https://react.carbondesignsystem.com/?path=/story/components-datatable--usage',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--basic',
       Vue:
@@ -121,7 +121,7 @@ usage documentation, see the Storybooks for each framework below.
     knobs={{ DataTable: ['isSortable'], Table: ['size', 'useZebraStyles'] }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/datatable-selection--usage',
+        'https://react.carbondesignsystem.com/?path=/story/components-datatable-selection--usage',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--basic',
       Vue:
@@ -169,7 +169,7 @@ usage documentation, see the Storybooks for each framework below.
     knobs={{ DataTable: ['isSortable'] }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/datatable-expansion--usage',
+        'https://react.carbondesignsystem.com/?path=/story/components-datatable-expansion--usage',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--with-expansion',
       Vue:
@@ -217,7 +217,7 @@ usage documentation, see the Storybooks for each framework below.
     id="with-batch-actions"
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/datatable-batch-actions--usage',
+        'https://react.carbondesignsystem.com/?path=/story/components-datatable-batch-actions--usage',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--with-toolbar',
       Vue:
