--- a/src/pages/components/date-picker/code.mdx
+++ b/src/pages/components/date-picker/code.mdx
@@ -19,7 +19,7 @@ usage documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/datepicker--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-datepicker--simple"
     >
 
 <MdxIcon name="react" />
@@ -77,7 +77,7 @@ usage documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/datepicker--simple',
+        'https://react.carbondesignsystem.com/?path=/story/components-datepicker--simple',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-date-picker--simple',
       Vue:
@@ -100,7 +100,7 @@ usage documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/datepicker--single-with-calendar',
+        'https://react.carbondesignsystem.com/?path=/story/components-datepicker--single',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-date-picker--single',
       Vue:
@@ -123,7 +123,7 @@ usage documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/datepicker--range-with-calendar',
+        'https://react.carbondesignsystem.com/?path=/story/components-datepicker--range',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-date-picker--range',
       Vue:
@@ -152,7 +152,7 @@ usage documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/timepicker--default',
+        'https://react.carbondesignsystem.com/?path=/story/components-timepicker--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-time-picker--simple',
       Vue:
