--- a/src/pages/components/dropdown/code.mdx
+++ b/src/pages/components/dropdown/code.mdx
@@ -21,7 +21,7 @@ documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/dropdown--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-dropdown--default"
     >
 
 <MdxIcon name="react" />
@@ -79,7 +79,7 @@ documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/dropdown--default',
+        'https://react.carbondesignsystem.com/?path=/story/components-dropdown--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-dropdown--basic',
       Vue:
@@ -101,7 +101,7 @@ documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/combobox--default',
+        'https://react.carbondesignsystem.com/?path=/story/components-combobox--combobox',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-dropdown--basic',
       Vue:
@@ -123,7 +123,7 @@ documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/multiselect--default',
+        'https://react.carbondesignsystem.com/?path=/story/components-multiselect--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-dropdown--basic',
       Vue:
@@ -142,7 +142,7 @@ documentation, see the Storybooks for each framework below.
     id="filter-multiselect"
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/multiselect--filterable',
+        'https://react.carbondesignsystem.com/?path=/story/components-multiselect--filterable',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-dropdown--basic',
       Vue:
