--- a/src/pages/components/form/code.mdx
+++ b/src/pages/components/form/code.mdx
@@ -19,7 +19,7 @@ documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/form--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-form--default"
     >
 
 <MdxIcon name="react" />
@@ -66,7 +66,8 @@ documentation, see the Storybooks for each framework below.
       SelectItem: ['disabled', 'hidden'],
     }}
     links={{
-      React: 'https://react.carbondesignsystem.com/?path=/story/form--default',
+      React:
+        'https://react.carbondesignsystem.com/?path=/story/components-form--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--label',
       Vue:
