--- a/src/pages/components/form/usage.mdx
+++ b/src/pages/components/form/usage.mdx
@@ -54,7 +54,8 @@ do you gain by collecting this information?
       SelectItem: ['disabled', 'hidden'],
     }}
     links={{
-      React: 'https://react.carbondesignsystem.com/?path=/story/form--default',
+      React:
+        'https://react.carbondesignsystem.com/?path=/story/components-form--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--label',
       Vue:
