--- a/src/pages/components/inline-loading/code.mdx
+++ b/src/pages/components/inline-loading/code.mdx
@@ -18,7 +18,7 @@ usage documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/inlineloading--inline-loading"
+    href="https://react.carbondesignsystem.com/?path=/story/components-inlineloading--inline-loading"
     >
 
 <MdxIcon name="react" />
@@ -63,7 +63,7 @@ usage documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'http://react.carbondesignsystem.com/?path=/story/inlineloading--inline-loading',
+        'https://react.carbondesignsystem.com/?path=/story/components-inlineloading--inline-loading',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-inline-loading--basic',
       Vue:
