--- a/src/pages/components/text-input/code.mdx
+++ b/src/pages/components/text-input/code.mdx
@@ -19,7 +19,7 @@ usage documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/textinput--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-textinput--default"
     >
 
 <MdxIcon name="react" />
@@ -72,7 +72,7 @@ usage documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/textinput--default',
+        'https://react.carbondesignsystem.com/?path=/story/components-textinput--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--label',
       Vue:
@@ -93,7 +93,7 @@ usage documentation, see the Storybooks for each framework below.
     id="password-input"
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/textinput--toggle-password-visibility',
+        'https://react.carbondesignsystem.com/?path=/story/components-textinput--toggle-password-visibility',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--label',
       Vue:
@@ -119,7 +119,7 @@ usage documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/textarea--default',
+        'https://react.carbondesignsystem.com/?path=/story/components-textarea--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--textarea',
       Vue:
