--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -63,7 +63,8 @@ for the most important action a user can take on the page.
       Tile: ['light'],
     }}
     links={{
-      React: 'https://react.carbondesignsystem.com/?path=/story/tile--default',
+      React:
+        'https://react.carbondesignsystem.com/?path=/story/components-tile--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--basic',
       Vue:
@@ -80,7 +81,8 @@ for the most important action a user can take on the page.
       ClickableTile: ['light', 'clicked'],
     }}
     links={{
-      React: 'https://react.carbondesignsystem.com/?path=/story/tile--default',
+      React:
+        'https://react.carbondesignsystem.com/?path=/story/components-tile--clickable',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--basic',
       Vue:
@@ -100,7 +102,7 @@ for the most important action a user can take on the page.
     }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/tile--clickable',
+        'https://react.carbondesignsystem.com/?path=/story/components-tile--radio',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--clickable',
       Vue:
@@ -145,7 +147,7 @@ for the most important action a user can take on the page.
     }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/tile--multi-select',
+        'https://react.carbondesignsystem.com/?path=/story/components-tile--multi-select',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--selectable',
       Vue:
@@ -192,7 +194,7 @@ for the most important action a user can take on the page.
     }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/tile--expandable',
+        'https://react.carbondesignsystem.com/?path=/story/components-tile--expandable',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--expandable',
       Vue:
