--- a/src/pages/components/tooltip/code.mdx
+++ b/src/pages/components/tooltip/code.mdx
@@ -21,7 +21,7 @@ documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/tooltip--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-tooltip--default-bottom"
     >
 
 <MdxIcon name="react" />
@@ -72,7 +72,7 @@ documentation, see the Storybooks for each framework below.
     id="tooltip"
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/tooltip--default-bottom',
+        'https://react.carbondesignsystem.com/?path=/story/components-tooltip--default-bottom',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tooltip--basic',
       Vue:
@@ -102,7 +102,7 @@ documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/tooltipicon--default',
+        'https://react.carbondesignsystem.com/?path=/story/components-tooltipicon--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tooltip-icon--basic',
       Vue:
@@ -122,7 +122,7 @@ documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/tooltipdefinition--default',
+        'https://react.carbondesignsystem.com/?path=/story/components-tooltipdefinition--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tooltip-definition--basic',
       Vue:
