--- a/src/pages/components/accordion/code.mdx
+++ b/src/pages/components/accordion/code.mdx
@@ -20,7 +20,7 @@ usage documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/accordion--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-accordion--accordion"
     >
 
 <MdxIcon name="react" />
@@ -66,7 +66,7 @@ usage documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'http://react.carbondesignsystem.com/?path=/story/accordion--default',
+        'https://react.carbondesignsystem.com/?path=/story/components-accordion--accordion',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-accordion--basic',
       Vue:
