--- a/src/pages/components/breadcrumb/code.mdx
+++ b/src/pages/components/breadcrumb/code.mdx
@@ -19,7 +19,7 @@ usage documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/breadcrumb--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-breadcrumb--breadcrumb"
     >
 
 <MdxIcon name="react" />
@@ -62,7 +62,7 @@ usage documentation, see the Storybooks for each framework below.
     id="currentPage"
     links={{
       React:
-        'http://react.carbondesignsystem.com/?path=/story/breadcrumb--default',
+        'https://react.carbondesignsystem.com/?path=/story/components-breadcrumb--breadcrumb',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-breadcrumb--basic',
       Vue:
@@ -79,7 +79,7 @@ usage documentation, see the Storybooks for each framework below.
     id="breadcrumb"
     links={{
       React:
-        'http://react.carbondesignsystem.com/?path=/story/breadcrumb--default',
+        'https://react.carbondesignsystem.com/?path=/story/components-breadcrumb--breadcrumb',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-breadcrumb--basic',
       Vue:
