--- a/src/pages/components/button/code.mdx
+++ b/src/pages/components/button/code.mdx
@@ -21,7 +21,7 @@ documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/button--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-button--default"
     >
 
 <MdxIcon name="react" />
@@ -75,7 +75,7 @@ documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'http://react.carbondesignsystem.com/?path=/story/buttons--default',
+        'https://react.carbondesignsystem.com/?path=/story/components-button--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-button--basic',
       Vue:
@@ -91,7 +91,7 @@ documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'http://react.carbondesignsystem.com/?path=/story/buttons--default',
+        'https://react.carbondesignsystem.com/?path=/story/components-button--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-button--basic',
       Vue:
@@ -107,7 +107,7 @@ documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/buttons--icon-only-buttons',
+        'https://react.carbondesignsystem.com/?path=/story/components-button--icon-button',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-button--basic',
       Vue:
