--- a/src/pages/components/code-snippet/code.mdx
+++ b/src/pages/components/code-snippet/code.mdx
@@ -19,7 +19,7 @@ usage documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/codesnippet--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-codesnippet--inline"
     >
 
 <MdxIcon name="react" />
@@ -76,7 +76,7 @@ import {
     knobs={{ CodeSnippet: ['light'] }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/codesnippet--singleline',
+        'https://react.carbondesignsystem.com/?path=/story/components-codesnippet--singleline',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-code-snippet--basic',
       Vue:
@@ -92,7 +92,7 @@ import {
     knobs={{ CodeSnippet: ['light'] }}
     links={{
       React:
-        'http://react.carbondesignsystem.com/?path=/story/codesnippet--inline',
+        'https://react.carbondesignsystem.com/?path=/story/components-codesnippet--multiline',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-code-snippet--basic',
       Vue:
@@ -108,7 +108,7 @@ import {
     knobs={{ CodeSnippet: ['light'] }}
     links={{
       React:
-        'http://react.carbondesignsystem.com/?path=/story/codesnippet--inline',
+        'https://react.carbondesignsystem.com/?path=/story/components-codesnippet--inline',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-code-snippet--basic',
       Vue:
