--- a/src/pages/components/link/code.mdx
+++ b/src/pages/components/link/code.mdx
@@ -19,7 +19,7 @@ documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/link--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-link--default"
     >
 
 <MdxIcon name="react" />
@@ -61,7 +61,8 @@ documentation, see the Storybooks for each framework below.
     id="link"
     knobs={{ Link: ['disabled', 'inline'] }}
     links={{
-      React: 'https://react.carbondesignsystem.com/?path=/story/link--default',
+      React:
+        'https://react.carbondesignsystem.com/?path=/story/components-link--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-link--basic',
       Vue:
