--- a/src/pages/components/link/usage.mdx
+++ b/src/pages/components/link/usage.mdx
@@ -70,7 +70,8 @@ be used for navigational actions.
     id="link"
     knobs={{ Link: ['disabled', 'inline'] }}
     links={{
-      React: 'https://react.carbondesignsystem.com/?path=/story/link--default',
+      React:
+        'https://react.carbondesignsystem.com/?path=/story/components-link--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-link--basic',
       Vue:
