--- a/src/pages/components/modal/code.mdx
+++ b/src/pages/components/modal/code.mdx
@@ -19,7 +19,7 @@ documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/modal--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-modal--default"
     >
 
 <MdxIcon name="react" />
@@ -67,7 +67,8 @@ documentation, see the Storybooks for each framework below.
       ModalWrapper: ['passiveModal', 'danger', 'disabled', 'size'],
     }}
     links={{
-      React: 'https://react.carbondesignsystem.com/?path=/story/modal--default',
+      React:
+        'https://react.carbondesignsystem.com/?path=/story/components-modal--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
       Vue:
@@ -85,7 +86,8 @@ documentation, see the Storybooks for each framework below.
   <ComponentVariant
     id="scrolling-content"
     links={{
-      React: 'https://react.carbondesignsystem.com/?path=/story/modal--default',
+      React:
+        'https://react.carbondesignsystem.com/?path=/story/components-modal--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
       Vue:
