--- a/src/pages/components/modal/usage.mdx
+++ b/src/pages/components/modal/usage.mdx
@@ -88,7 +88,8 @@ destructive or irreversible then use a transactional danger modal.
       ModalWrapper: ['passiveModal', 'danger', 'disabled', 'size'],
     }}
     links={{
-      React: 'https://react.carbondesignsystem.com/?path=/story/modal--default',
+      React:
+        'https://react.carbondesignsystem.com/?path=/story/components-modal--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
       Vue:
@@ -106,7 +107,8 @@ destructive or irreversible then use a transactional danger modal.
   <ComponentVariant
     id="scrolling-content"
     links={{
-      React: 'https://react.carbondesignsystem.com/?path=/story/modal--default',
+      React:
+        'https://react.carbondesignsystem.com/?path=/story/components-modal--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-modal--basic',
       Vue:
