--- a/src/pages/components/number-input/code.mdx
+++ b/src/pages/components/number-input/code.mdx
@@ -19,7 +19,7 @@ usage documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/numberinput--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-numberinput--default"
     >
 
 <MdxIcon name="react" />
@@ -65,7 +65,7 @@ usage documentation, see the Storybooks for each framework below.
     id="number-input"
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/numberinput--default',
+        'https://react.carbondesignsystem.com/?path=/story/components-numberinput--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-number--basic',
       Vue:
@@ -87,7 +87,7 @@ usage documentation, see the Storybooks for each framework below.
     id="mobile-number-input"
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/numberinput--default',
+        'https://react.carbondesignsystem.com/?path=/story/components-numberinput--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-number--basic',
       Vue:
