--- a/src/pages/components/pagination/code.mdx
+++ b/src/pages/components/pagination/code.mdx
@@ -19,7 +19,7 @@ usage documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/pagination--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-pagination--pagination"
     >
 
 <MdxIcon name="react" />
@@ -69,7 +69,7 @@ usage documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/pagination--pagination',
+        'https://react.carbondesignsystem.com/?path=/story/components-pagination--pagination',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-pagination--basic',
       Vue:
