--- a/src/pages/components/select/code.mdx
+++ b/src/pages/components/select/code.mdx
@@ -19,7 +19,7 @@ documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/select--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-select--default"
     >
 
 <MdxIcon name="react" />
@@ -66,7 +66,7 @@ documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/select--default',
+        'https://react.carbondesignsystem.com/?path=/story/components-select--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-select--basic',
       Vue:
