--- a/src/pages/components/slider/code.mdx
+++ b/src/pages/components/slider/code.mdx
@@ -19,7 +19,7 @@ documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/slider--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-slider--default"
     >
 
 <MdxIcon name="react" />
@@ -62,7 +62,7 @@ documentation, see the Storybooks for each framework below.
     knobs={{ Slider: ['disabled', 'hideTextInput', 'light'] }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/slider--default',
+        'https://react.carbondesignsystem.com/?path=/story/components-slider--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-slider--basic',
       Vue:
