--- a/src/pages/components/tabs/code.mdx
+++ b/src/pages/components/tabs/code.mdx
@@ -18,7 +18,7 @@ documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/tabs--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-tabs--default"
     >
 
 <MdxIcon name="react" />
@@ -60,7 +60,8 @@ documentation, see the Storybooks for each framework below.
     id="tabs"
     knobs={{ Tabs: ['type'], Tab: ['disabled', 'selected'] }}
     links={{
-      React: 'https://react.carbondesignsystem.com/?path=/story/tabs--default',
+      React:
+        'https://react.carbondesignsystem.com/?path=/story/components-tabs--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tabs--basic',
       Vue:
