--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -48,7 +48,8 @@ Tabs are used to quickly navigate between views within the same context.
     id="tabs"
     knobs={{ Tabs: ['type'], Tab: ['disabled', 'selected'] }}
     links={{
-      React: 'https://react.carbondesignsystem.com/?path=/story/tabs--default',
+      React:
+        'https://react.carbondesignsystem.com/?path=/story/components-tabs--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tabs--basic',
       Vue:
