--- a/src/pages/components/tag/code.mdx
+++ b/src/pages/components/tag/code.mdx
@@ -19,7 +19,7 @@ documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/tag--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-tag--default"
     >
 
 <MdxIcon name="react" />
@@ -61,7 +61,8 @@ documentation, see the Storybooks for each framework below.
     id="tag"
     knobs={{ Tag: ['filter', 'disabled'] }}
     links={{
-      React: 'https://react.carbondesignsystem.com/?path=/story/tag--default',
+      React:
+        'https://react.carbondesignsystem.com/?path=/story/components-tag--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tag--basic',
       Vue:
