--- a/src/pages/components/tag/usage.mdx
+++ b/src/pages/components/tag/usage.mdx
@@ -65,7 +65,8 @@ that particular category.
     id="tag"
     knobs={{ Tag: ['filter', 'disabled'] }}
     links={{
-      React: 'https://react.carbondesignsystem.com/?path=/story/tag--default',
+      React:
+        'https://react.carbondesignsystem.com/?path=/story/components-tag--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tag--basic',
       Vue:
