--- a/src/pages/components/tile/code.mdx
+++ b/src/pages/components/tile/code.mdx
@@ -19,7 +19,7 @@ documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/tile--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-tile--default"
     >
 
 <MdxIcon name="react" />
@@ -79,7 +79,8 @@ documentation, see the Storybooks for each framework below.
       Tile: ['light'],
     }}
     links={{
-      React: 'https://react.carbondesignsystem.com/?path=/story/tile--default',
+      React:
+        'https://react.carbondesignsystem.com/?path=/story/components-tile--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--basic',
       Vue:
@@ -96,7 +97,8 @@ documentation, see the Storybooks for each framework below.
       ClickableTile: ['light', 'clicked'],
     }}
     links={{
-      React: 'https://react.carbondesignsystem.com/?path=/story/tile--default',
+      React:
+        'https://react.carbondesignsystem.com/?path=/story/components-tile--clickable',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--basic',
       Vue:
@@ -116,7 +118,7 @@ documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/tile--clickable',
+        'https://react.carbondesignsystem.com/?path=/story/components-tile--radio',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--clickable',
       Vue:
@@ -161,7 +163,7 @@ documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/tile--multi-select',
+        'https://react.carbondesignsystem.com/?path=/story/components-tile--multi-select',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--selectable',
       Vue:
@@ -208,7 +210,7 @@ documentation, see the Storybooks for each framework below.
     }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/tile--expandable',
+        'https://react.carbondesignsystem.com/?path=/story/components-tile--expandable',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--expandable',
       Vue:
