--- a/src/pages/components/toggle/code.mdx
+++ b/src/pages/components/toggle/code.mdx
@@ -19,7 +19,7 @@ documentation, see the Storybooks for each framework below.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="React"
-    href="http://react.carbondesignsystem.com/?path=/story/toggle--default"
+    href="https://react.carbondesignsystem.com/?path=/story/components-toggle--default"
     >
 
 <MdxIcon name="react" />
@@ -65,7 +65,7 @@ documentation, see the Storybooks for each framework below.
     id="default-toggle"
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/toggle--toggled',
+        'https://react.carbondesignsystem.com/?path=/story/components-toggle--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-toggle--basic',
       Vue:
@@ -83,7 +83,7 @@ documentation, see the Storybooks for each framework below.
     id="small-toggle"
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/togglesmall--toggled',
+        'https://react.carbondesignsystem.com/?path=/story/components-toggle--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-toggle--basic',
       Vue:
